--- a/pet-infra/pet-vpc-and-subnets.yml
+++ b/pet-infra/pet-vpc-and-subnets.yml
@@ -5,7 +5,7 @@ Parameters:
   VpcCidrBlock:
     Type: String
     Description: The CIDR block for the VPC
-    Default: 197.0.0.0/16
+    Default: 10.0.0.0/16
   PublicSubnetCidrBlock:
     Type: String
     Description: The CIDR block for the public subnet
@@ -31,22 +31,6 @@ Resources:
           Value: PET-APP-VPC
         - Key: env
           Value: learning
-
-  PublicSubnet:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref MyVPC
-      CidrBlock: !Ref PublicSubnetCidrBlock
-      AvailabilityZone: !Ref AvailabilityZone
-      MapPublicIpOnLaunch: true
-      
-
-  PrivateSubnet:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref MyVPC
-      CidrBlock: !Ref PrivateSubnetCidrBlock
-      AvailabilityZone: !Ref AvailabilityZone
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
@@ -82,18 +66,6 @@ Resources:
       GatewayId: !Ref InternetGateway
       RouteTableId: !Ref PublicRouteTable
 
-  PublicSubnetRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet
-      RouteTableId: !Ref PublicRouteTable
-
-  PrivateSubnetRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !GetAtt PrivateSubnet.SubnetId
-      RouteTableId: !Ref PrivateRouteTable
-
   PublicSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -121,32 +93,42 @@ Resources:
 
 
 Outputs:
+  PetVPC:
+    Description: The VPC for pet app 
+    Value: !GetAtt MyVPC.VpcId
+    Export:
+      Name: PetVPCID
+
+  PetInternetGateway:
+    Description: The internet gateway for this vpc 
+    Value: !GetAtt InternetGateway.InternetGatewayId
+    Export:
+      Name: PetInternetGatewayID
+
   PrivateSecurityGroupID:
     Description:  Private Security Group ID
     Value: !GetAtt PrivateSecurityGroup.GroupId
     Export:
       Name: PetPrivateSecurityGroup
-  PrivateSubnetId:
-    Description: Private subnet id 
-    Value:  !GetAtt PrivateSubnet.SubnetId
-    Export:
-      Name: PetPrivateSubnet
+
   PublicSecurityGroupID:
     Description:  Public Security Group ID
     Value: !GetAtt PublicSecurityGroup.GroupId
     Export:
       Name: PetPublicSecurityGroup
-  PublicSubnetId:
-    Description: Public subnet id 
-    Value:  !GetAtt PublicSubnet.SubnetId
-    Export:
-      Name: PetPublicSubnet
+
 
   PrivateRouteTableID:
-    Description: Public subnet id 
+    Description: Private route table  id 
     Value:  !GetAtt PrivateRouteTable.RouteTableId
     Export:
       Name: PrivateRouteTableID  
+
+  PublicRouteTableID:
+    Description: Public route table  id 
+    Value:  !GetAtt PublicRouteTable.RouteTableId
+    Export:
+      Name: PublicRouteTableID
 
   NatEIP:
     Description: NAT Elastic IP  
